tests/ui-nightly/transmute-ref-dst-not-nocell.stderr
error[E0277]: the trait bound `Dst: zerocopy::Immutable` is not satisfied
  --> tests/ui-nightly/transmute-ref-dst-not-nocell.rs:23:33
   |
23 | const DST_NOT_IMMUTABLE: &Dst = transmute_ref!(&AU16(0));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                 |
   |                                 unsatisfied trait bound
   |                                 required by a bound introduced by this call
   |
help: the trait `zerocopy::Immutable` is not implemented for `Dst`
  --> tests/ui-nightly/transmute-ref-dst-not-nocell.rs:20:1
   |
20 | struct Dst(AU16);
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(Immutable)]` to `Dst`
   = help: the following other types implement trait `zerocopy::Immutable`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and $N others
note: required by a bound in `AssertDstIsImmutable`
  --> tests/ui-nightly/transmute-ref-dst-not-nocell.rs:23:33
   |
23 | const DST_NOT_IMMUTABLE: &Dst = transmute_ref!(&AU16(0));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertDstIsImmutable`
   = note: the full name for the type has been written to '$DIR/target/by-toolchain/nightly/tests/trybuild/x86_64-unknown-linux-gnu/debug/deps/$CRATE-467ee80567883a78.long-type-15523062094105663107.txt'
   = note: consider using `--verbose` to print the full type name to the console
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
